--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  image_picker: ^1.0.4 # Para seleccionar imagen de galería o cámara
+  email_validator: ^2.1.17 # Para validar formato de email
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -38,6 +40,8 @@ dependencies:
   animated_bottom_navigation_bar: ^1.4.0 
   dot_navigation_bar: ^1.0.2
   sqflite: ^2.4.1
+  translucent_navigation_bar: ^1.0.0
+  phosphor_flutter: ^1.4.0   
 
 dev_dependencies:
   flutter_test:
